2010-08-21  Paul Fitzpatrick  <paulfitz@sigmund>

	* src/libYARP_OS/src/Terminator.cpp: fix interrupt behavior on
	windows.

2010-08-21  Paul Fitzpatrick  <paulfitz@sigmund>

	* conf/FindACE.cmake: fix interface to output of
	scripts/fetch-ace.sh under windows.

2010-08-19 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_dev/src/ServerFrameGrabber.cpp
	* src/libYARP_dev/include/yarp/dev/RemoteFrameGrabber.h
	* src/libYARP_dev/include/yarp/dev/RemoteFrameGrabberDC1394.h
	* src/libYARP_dev/include/yarp/dev/FrameGrabberInterfaces.h

	Added image offset control to dragonfly2 device.

2010-08-13 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/src/Run.cpp
	Added clean process termination features
	- WM_CLOSE message to Win applications
        - CTRL_BREAK_EVENT to console applications

2010-08-12 Daniel Krieg <krieg@fias.uni-frankfurt.de>
    
    * added scripts/yarp_completion for tab-completion in bash

2010-07-28  Marco Randazzo  <marco.randazzo@iit.it>

	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
	* src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
	* src/libYARP_dev/src/RemoteControlBoard.cpp
	added method getControlModes() (multiple joint)
	
2010-07-26  Ugo Pattacini  <ugo.pattacini@iit.it>

	* src/libYARP_dev/include/yarp/dev/CartesianControl.h: added two more methods
	

2010-07-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpview/ImagePort.cpp: bring back broken save-image-set function
	

2010-07-23  Marco Randazzo  <marco.randazzo@iit.it>

	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.inl
	* src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
	ControlBoardHelper class now stores the conversion factor for joint torque sensors

2010-07-23  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>
