@@ -1,3 +1,8 @@
+2010-08-21  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>
+
+	* src/libYARP_OS/include/yarp/os/Value.h: fix problem copying
+	null values (thanks Arjan Gijsberts!)
+
 2010-08-21  Paul Fitzpatrick  <paulfitz@sigmund>
 
 	* src/libYARP_OS/src/Terminator.cpp: fix interrupt behavior on
